[tool.poetry]
name = "docktop"
version = "0.1.0"
description = ""
authors = ["Kopylov Denis <kopyloveden@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"
docker = "^7.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-mock = "^3.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
